Refactor RNA analysis notebook: reset execution counts, clear outputs, and enhance query aggregation for gene expression data.

--- a/rna-from-all-datasets.ipynb
+++ b/rna-from-all-datasets.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-09T09:44:07.834649Z",
@@ -634,16 +634,7 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/dist-packages/google/cloud/bigquery/table.py:1965: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tworzenie jednego zapytania z UNION ALL dla wszystkich datasetów\n",
     "union_queries = []\n",
@@ -658,8 +649,8 @@
     "query = f\"\"\"\n",
     "SELECT \n",
     "    case_barcode,\n",
-    "    ARRAY_AGG(gene_name) as gene_name,\n",
-    "    ARRAY_AGG(tpm_unstranded) as tpm_unstranded,\n",
+    "    ARRAY_AGG(gene_name ORDER BY gene_name) as gene_name,\n",
+    "    ARRAY_AGG(tpm_unstranded ORDER BY gene_name) as tpm_unstranded,\n",
     "    ANY_VALUE(primary_site) as primary_site\n",
     "FROM (\n",
     "    {' UNION ALL '.join(union_queries)}\n",
@@ -674,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -705,132 +696,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01BR001</td>\n",
-       "      <td>[CCNB3, SRP72, IL21R, CREB1, ZNF217, WAS, SETD...</td>\n",
-       "      <td>[1.6627, 78.5815, 0.3914, 6.0219, 25.5148, 2.3...</td>\n",
-       "      <td>Breast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01BR008</td>\n",
-       "      <td>[DNMT3B, PTPRD, NADK, CD79B, FANCM, DICER1, PL...</td>\n",
-       "      <td>[3.742, 0.3422, 41.7825, 22.1772, 1.8766, 5.47...</td>\n",
-       "      <td>Breast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01BR009</td>\n",
-       "      <td>[DNMT3B, CD274, IGF1R, ALOX5, NBN, SFPQ, SLFN1...</td>\n",
-       "      <td>[7.8033, 4.8714, 17.8308, 23.9544, 27.5126, 94...</td>\n",
-       "      <td>Breast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01BR010</td>\n",
-       "      <td>[SDHB, BRD4, NUP98, NBN, B2M, DDX10, XBP1, SET...</td>\n",
-       "      <td>[71.5215, 9.8544, 26.7372, 26.38, 581.3551, 7....</td>\n",
-       "      <td>Breast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01BR015</td>\n",
-       "      <td>[ZNF292, BCOR, MUC1, ZMYM2, PUM1, TFG, YWHAE, ...</td>\n",
-       "      <td>[14.2097, 16.9304, 287.1537, 43.2128, 43.6365,...</td>\n",
-       "      <td>Breast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19555</th>\n",
-       "      <td>TCGA-ZS-A9CF</td>\n",
-       "      <td>[JAK3, IDH1, FOXO4, ATRX, ELN, SNX29, LMO2, EP...</td>\n",
-       "      <td>[1.5371, 390.544, 10.5619, 5.181, 1.4089, 2.03...</td>\n",
-       "      <td>Liver and intrahepatic bile ducts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19556</th>\n",
-       "      <td>TCGA-ZS-A9CG</td>\n",
-       "      <td>[VTCN1, CNTRL, NFKBIE, PUM1, MED12, ARID1B, KC...</td>\n",
-       "      <td>[0.2125, 1.1661, 4.7122, 21.3718, 10.5604, 1.6...</td>\n",
-       "      <td>Liver and intrahepatic bile ducts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19557</th>\n",
-       "      <td>TCGA-ZT-A8OM</td>\n",
-       "      <td>[ELF4, KTN1, CNBP, HLA-A, H3-3B, RRAS, CD276, ...</td>\n",
-       "      <td>[8.5978, 10.4263, 199.8163, 575.6128, 328.6598...</td>\n",
-       "      <td>Other and ill-defined sites</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19558</th>\n",
-       "      <td>TCGA-ZU-A8S4</td>\n",
-       "      <td>[PIK3C2B, EP300, CHEK2, BCL2, STAT6, RXRA, GTS...</td>\n",
-       "      <td>[4.9116, 16.9249, 13.1701, 3.9988, 79.0576, 21...</td>\n",
-       "      <td>Liver and intrahepatic bile ducts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19559</th>\n",
-       "      <td>TCGA-ZX-AA5X</td>\n",
-       "      <td>[FUS, NFATC2, RB1, EP400, PDCD1, SMO, ITK, ATM...</td>\n",
-       "      <td>[110.1857, 4.759, 30.6603, 10.0498, 2.3879, 12...</td>\n",
-       "      <td>Cervix uteri</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19560 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       case_barcode                                          gene_name  \\\n",
-       "0           01BR001  [CCNB3, SRP72, IL21R, CREB1, ZNF217, WAS, SETD...   \n",
-       "1           01BR008  [DNMT3B, PTPRD, NADK, CD79B, FANCM, DICER1, PL...   \n",
-       "2           01BR009  [DNMT3B, CD274, IGF1R, ALOX5, NBN, SFPQ, SLFN1...   \n",
-       "3           01BR010  [SDHB, BRD4, NUP98, NBN, B2M, DDX10, XBP1, SET...   \n",
-       "4           01BR015  [ZNF292, BCOR, MUC1, ZMYM2, PUM1, TFG, YWHAE, ...   \n",
-       "...             ...                                                ...   \n",
-       "19555  TCGA-ZS-A9CF  [JAK3, IDH1, FOXO4, ATRX, ELN, SNX29, LMO2, EP...   \n",
-       "19556  TCGA-ZS-A9CG  [VTCN1, CNTRL, NFKBIE, PUM1, MED12, ARID1B, KC...   \n",
-       "19557  TCGA-ZT-A8OM  [ELF4, KTN1, CNBP, HLA-A, H3-3B, RRAS, CD276, ...   \n",
-       "19558  TCGA-ZU-A8S4  [PIK3C2B, EP300, CHEK2, BCL2, STAT6, RXRA, GTS...   \n",
-       "19559  TCGA-ZX-AA5X  [FUS, NFATC2, RB1, EP400, PDCD1, SMO, ITK, ATM...   \n",
-       "\n",
-       "                                          tpm_unstranded  \\\n",
-       "0      [1.6627, 78.5815, 0.3914, 6.0219, 25.5148, 2.3...   \n",
-       "1      [3.742, 0.3422, 41.7825, 22.1772, 1.8766, 5.47...   \n",
-       "2      [7.8033, 4.8714, 17.8308, 23.9544, 27.5126, 94...   \n",
-       "3      [71.5215, 9.8544, 26.7372, 26.38, 581.3551, 7....   \n",
-       "4      [14.2097, 16.9304, 287.1537, 43.2128, 43.6365,...   \n",
-       "...                                                  ...   \n",
-       "19555  [1.5371, 390.544, 10.5619, 5.181, 1.4089, 2.03...   \n",
-       "19556  [0.2125, 1.1661, 4.7122, 21.3718, 10.5604, 1.6...   \n",
-       "19557  [8.5978, 10.4263, 199.8163, 575.6128, 328.6598...   \n",
-       "19558  [4.9116, 16.9249, 13.1701, 3.9988, 79.0576, 21...   \n",
-       "19559  [110.1857, 4.759, 30.6603, 10.0498, 2.3879, 12...   \n",
-       "\n",
-       "                            primary_site  \n",
-       "0                                 Breast  \n",
-       "1                                 Breast  \n",
-       "2                                 Breast  \n",
-       "3                                 Breast  \n",
-       "4                                 Breast  \n",
-       "...                                  ...  \n",
-       "19555  Liver and intrahepatic bile ducts  \n",
-       "19556  Liver and intrahepatic bile ducts  \n",
-       "19557        Other and ill-defined sites  \n",
-       "19558  Liver and intrahepatic bile ducts  \n",
-       "19559                       Cervix uteri  \n",
-       "\n",
-       "[19560 rows x 4 columns]"
+       "Empty DataFrame\n",
+       "Columns: [case_barcode, gene_name, tpm_unstranded, primary_site]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
